syntax = "proto3";

package pb;

import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/itsscb/df/pb";

message DeletePaymentRequest {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
        json_schema: {
          title: "Delete Payment";
          description: "Delete a Payment";
          required: [
            "id"
          ];
        };
        example: "{\"id\": \"1\"}"
    };
    int64 id = 1;
}

message DeletePaymentResponse {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
        json_schema: {
          title: "Delete Payment Response";
        };
        example: "{\"id\": \"1\", \"deleted\": true}"
    };
    int64 id = 1;
    bool deleted = 2;
}